--- a/package.json
+++ b/package.json
@@ -13,7 +13,13 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.12.2",
     "core-js": "^3.6.5",
-    "nuxt": "^2.14.5"
+    "express": "^4.17.1",
+    "moment": "^2.29.0",
+    "mysql2": "^2.2.5",
+    "nuxt": "^2.14.5",
+    "ol": "^6.4.3",
+    "proj4": "^2.6.2",
+    "sequelize": "^6.3.5"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^3.1.0",
