--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "nuxt": "^2.14.5",
     "ol": "^6.4.3",
     "proj4": "^2.6.2",
-    "sequelize": "^6.3.5"
+    "sequelize": "^6.3.5",
+    "uuid4": "^2.0.2"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^3.1.0",
