--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.12.2",
+    "axios": "^0.20.0",
+    "cheerio": "^1.0.0-rc.3",
     "cookie-parser": "^1.4.5",
     "core-js": "^3.6.5",
     "express": "^4.17.1",
@@ -20,6 +22,7 @@
     "nuxt": "^2.14.5",
     "ol": "^6.4.3",
     "proj4": "^2.6.2",
+    "request": "^2.88.2",
     "sequelize": "^6.3.5",
     "uuid4": "^2.0.2"
   },
